apps/configs/base/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-public
  namespace: rabbitmq
spec:
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
  type: LoadBalancer
